--- a/ipv6-udp-only/.project
+++ b/ipv6-udp-only/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ethernetdriver</name>
+	<name>ipv6-udp-only-ethernetdriver</name>
 	<comment></comment>
 	<projects>
 	</projects>
